[tool.black]
line-length = 119

[tool.poetry]
name = "vocjem"
version = "0.1.0"
description = ""
authors = ["Hetorus NL <timkleinnijenhuis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
